less : firefox bug fix / svg star overflow is box

--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -388,6 +388,7 @@ max-height: calc(~"100%" - @margin)
   height: 16px;
   display: inline-block;
   user-select :none;
+  overflow: hidden;
 }
 
 .infoBox{
@@ -397,6 +398,7 @@ max-height: calc(~"100%" - @margin)
   display: inline-block;
   user-select :none;
   text-align: center;
+
 }
 
 .clusterBox{
